--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.DentifyDentalIdentify"
         tools:targetApi="31">
         <activity
-            android:name=".ui.settings.theme.ThemeSettingsActivity"
+            android:name=".ui.settings.SettingsPreferencesActivity"
             android:exported="false" />
         <activity
             android:name=".ui.detail.DetailActivity"
